Fix "nothing at all" message on small devices
Small devices had feed at width 0 with automatic margins in Chrome

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -809,7 +809,7 @@ p {
 }
 
 @media (max-width: 450px) {
-  .feed-container { width: auto; }
+  .feed-container { width: auto; margin: 0; }
   .load-more-button { box-sizing: border-box; width: 100%; }
 }
 
